--- a/lights/Cargo.toml
+++ b/lights/Cargo.toml
@@ -12,6 +12,8 @@ toml_edit = "0.19.7"
 log = "0.4.17"
 env_logger = "0.10.0"
 serde_json = "1.0"
+rand = "0.8.5"
+colored = "2.0.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
